# tcr-dataset-size-estimation

./: .gitignore  README.md
ligandome/: Dockerfile.ligandome  README.md  install_dependencies.sh  requirements.txt  run_experimental_ligandome_workflow.py  setup.py
ligandome/database_collection/: README.md  fetch_databases.ipynb
ligandome/database_collection/licenses/: VDJDB_LICENSE.txt
ligandome/ligandome/utils/: blast.py  cleaning.py  constants.py  databases.py  fasta.py  graphs.py  netmhcpan.py  sachica.py  sequence.py
models_benchmark/: README.md  bootstrap.ipynb  dataset_preparation.ipynb  environment.yml  plot_fig2a_2b.ipynb  plot_fig2c.ipynb  pyproject.toml
models_benchmark/models/: __init__.py  atm_tcr.patch  dataset.py  embedding_generation.py  train_predict.py
models_benchmark/models/config/: config.yaml
models_benchmark/models/config/data/: shared.yaml
models_benchmark/models/config/model/: rf.yaml  xgb.yaml
models_benchmark/models/utils/: __init__.py  constants.py  embedding.py  generic.py
models_benchmark/results_bootstrap/: results_bootstrap_atm_tcr.csv  results_bootstrap_rf.csv  results_bootstrap_tulip.csv  results_bootstrap_xgb.csv
models_benchmark/results_model/atm_tcr/: fold_1.csv
models_benchmark/results_model/rf/: fold_1.csv
models_benchmark/results_model/tulip/: fold_1.csv
models_benchmark/results_model/xgb/: fold_1.csv
